--- a/py6.ipynb
+++ b/py6.ipynb
@@ -353,10 +353,332 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country Name       object\n",
+       "Country Code       object\n",
+       "Indicator Name     object\n",
+       "Indicator Code     object\n",
+       "1960              float64\n",
+       "                   ...   \n",
+       "2017              float64\n",
+       "2018              float64\n",
+       "2019              float64\n",
+       "2020              float64\n",
+       "Unnamed: 65       float64\n",
+       "Length: 66, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1960</th>\n",
+       "      <th>1961</th>\n",
+       "      <th>1962</th>\n",
+       "      <th>1963</th>\n",
+       "      <th>1964</th>\n",
+       "      <th>1965</th>\n",
+       "      <th>1966</th>\n",
+       "      <th>1967</th>\n",
+       "      <th>1968</th>\n",
+       "      <th>1969</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>Unnamed: 65</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
+       "      <td>3.032156e+09</td>\n",
+       "      <td>3.071596e+09</td>\n",
+       "      <td>3.124561e+09</td>\n",
+       "      <td>3.189656e+09</td>\n",
+       "      <td>3.255146e+09</td>\n",
+       "      <td>3.322047e+09</td>\n",
+       "      <td>3.392098e+09</td>\n",
+       "      <td>3.461620e+09</td>\n",
+       "      <td>3.532783e+09</td>\n",
+       "      <td>3.606554e+09</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.085790e+09</td>\n",
+       "      <td>7.169675e+09</td>\n",
+       "      <td>7.254293e+09</td>\n",
+       "      <td>7.339077e+09</td>\n",
+       "      <td>7.424485e+09</td>\n",
+       "      <td>7.509410e+09</td>\n",
+       "      <td>7.592476e+09</td>\n",
+       "      <td>7.673345e+09</td>\n",
+       "      <td>7.752841e+09</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 62 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             1960          1961          1962          1963          1964  \\\n",
+       "259  3.032156e+09  3.071596e+09  3.124561e+09  3.189656e+09  3.255146e+09   \n",
+       "\n",
+       "             1965          1966          1967          1968          1969  \\\n",
+       "259  3.322047e+09  3.392098e+09  3.461620e+09  3.532783e+09  3.606554e+09   \n",
+       "\n",
+       "     ...          2012          2013          2014          2015  \\\n",
+       "259  ...  7.085790e+09  7.169675e+09  7.254293e+09  7.339077e+09   \n",
+       "\n",
+       "             2016          2017          2018          2019          2020  \\\n",
+       "259  7.424485e+09  7.509410e+09  7.592476e+09  7.673345e+09  7.752841e+09   \n",
+       "\n",
+       "     Unnamed: 65  \n",
+       "259          NaN  \n",
+       "\n",
+       "[1 rows x 62 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset=dataset.drop(['Country Name','Country Code','Indicator Name','Indicator Code'],axis='columns')\n",
+    "dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1960</th>\n",
+       "      <th>1961</th>\n",
+       "      <th>1962</th>\n",
+       "      <th>1963</th>\n",
+       "      <th>1964</th>\n",
+       "      <th>1965</th>\n",
+       "      <th>1966</th>\n",
+       "      <th>1967</th>\n",
+       "      <th>1968</th>\n",
+       "      <th>1969</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2011</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2020</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
+       "      <td>3.032156e+09</td>\n",
+       "      <td>3.071596e+09</td>\n",
+       "      <td>3.124561e+09</td>\n",
+       "      <td>3.189656e+09</td>\n",
+       "      <td>3.255146e+09</td>\n",
+       "      <td>3.322047e+09</td>\n",
+       "      <td>3.392098e+09</td>\n",
+       "      <td>3.461620e+09</td>\n",
+       "      <td>3.532783e+09</td>\n",
+       "      <td>3.606554e+09</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.002881e+09</td>\n",
+       "      <td>7.085790e+09</td>\n",
+       "      <td>7.169675e+09</td>\n",
+       "      <td>7.254293e+09</td>\n",
+       "      <td>7.339077e+09</td>\n",
+       "      <td>7.424485e+09</td>\n",
+       "      <td>7.509410e+09</td>\n",
+       "      <td>7.592476e+09</td>\n",
+       "      <td>7.673345e+09</td>\n",
+       "      <td>7.752841e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 61 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             1960          1961          1962          1963          1964  \\\n",
+       "259  3.032156e+09  3.071596e+09  3.124561e+09  3.189656e+09  3.255146e+09   \n",
+       "\n",
+       "             1965          1966          1967          1968          1969  \\\n",
+       "259  3.322047e+09  3.392098e+09  3.461620e+09  3.532783e+09  3.606554e+09   \n",
+       "\n",
+       "     ...          2011          2012          2013          2014  \\\n",
+       "259  ...  7.002881e+09  7.085790e+09  7.169675e+09  7.254293e+09   \n",
+       "\n",
+       "             2015          2016          2017          2018          2019  \\\n",
+       "259  7.339077e+09  7.424485e+09  7.509410e+09  7.592476e+09  7.673345e+09   \n",
+       "\n",
+       "             2020  \n",
+       "259  7.752841e+09  \n",
+       "\n",
+       "[1 rows x 61 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset=dataset.dropna(how='all',axis='columns')\n",
+    "dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dataset=dataset.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>World Population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1960</th>\n",
+       "      <td>3.032156e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961</th>\n",
+       "      <td>3.071596e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1962</th>\n",
+       "      <td>3.124561e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1963</th>\n",
+       "      <td>3.189656e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1964</th>\n",
+       "      <td>3.255146e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      World Population\n",
+       "1960      3.032156e+09\n",
+       "1961      3.071596e+09\n",
+       "1962      3.124561e+09\n",
+       "1963      3.189656e+09\n",
+       "1964      3.255146e+09"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset=dataset.rename(columns={259:'World Population'})\n",
+    "dataset.head()"
+   ]
   }
  ],
  "metadata": {
