--- a/py10.ipynb
+++ b/py10.ipynb
@@ -2,13 +2,310 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import matplotlib.pyplot as plt \n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=pd.read_csv('files/data_science_salaries.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>work_year</th>\n",
+       "      <th>experience_level</th>\n",
+       "      <th>employment_type</th>\n",
+       "      <th>job_title</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>salary_currency</th>\n",
+       "      <th>salary_in_usd</th>\n",
+       "      <th>employee_residence</th>\n",
+       "      <th>remote_ratio</th>\n",
+       "      <th>company_location</th>\n",
+       "      <th>company_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021e</td>\n",
+       "      <td>EN</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Science Consultant</td>\n",
+       "      <td>54000</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>64369</td>\n",
+       "      <td>DE</td>\n",
+       "      <td>50</td>\n",
+       "      <td>DE</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>68428</td>\n",
+       "      <td>GR</td>\n",
+       "      <td>100</td>\n",
+       "      <td>US</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021e</td>\n",
+       "      <td>EX</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Head of Data Science</td>\n",
+       "      <td>85000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>85000</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>0</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021e</td>\n",
+       "      <td>EX</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Head of Data</td>\n",
+       "      <td>230000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>230000</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>50</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021e</td>\n",
+       "      <td>EN</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Machine Learning Engineer</td>\n",
+       "      <td>125000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>125000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>100</td>\n",
+       "      <td>US</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  work_year experience_level employment_type                  job_title  \\\n",
+       "0     2021e               EN              FT    Data Science Consultant   \n",
+       "1      2020               SE              FT             Data Scientist   \n",
+       "2     2021e               EX              FT       Head of Data Science   \n",
+       "3     2021e               EX              FT               Head of Data   \n",
+       "4     2021e               EN              FT  Machine Learning Engineer   \n",
+       "\n",
+       "   salary salary_currency  salary_in_usd employee_residence  remote_ratio  \\\n",
+       "0   54000             EUR          64369                 DE            50   \n",
+       "1   60000             EUR          68428                 GR           100   \n",
+       "2   85000             USD          85000                 RU             0   \n",
+       "3  230000             USD         230000                 RU            50   \n",
+       "4  125000             USD         125000                 US           100   \n",
+       "\n",
+       "  company_location company_size  \n",
+       "0               DE            L  \n",
+       "1               US            L  \n",
+       "2               RU            M  \n",
+       "3               RU            L  \n",
+       "4               US            S  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "245"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "work_year             object\n",
+       "experience_level      object\n",
+       "employment_type       object\n",
+       "job_title             object\n",
+       "salary                 int64\n",
+       "salary_currency       object\n",
+       "salary_in_usd          int64\n",
+       "employee_residence    object\n",
+       "remote_ratio           int64\n",
+       "company_location      object\n",
+       "company_size          object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "work_year             False\n",
+       "experience_level      False\n",
+       "employment_type       False\n",
+       "job_title             False\n",
+       "salary                False\n",
+       "salary_currency       False\n",
+       "salary_in_usd         False\n",
+       "employee_residence    False\n",
+       "remote_ratio          False\n",
+       "company_location      False\n",
+       "company_size          False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['2021e', '2020'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['work_year'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['EN', 'SE', 'EX', 'MI'], dtype=object)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['experience_level'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['L', 'M', 'S'], dtype=object)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['company_size'].unique()"
    ]
   }
  ],
@@ -19,7 +316,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.6"
   },
   "orig_nbformat": 4,
