--- a/py10.ipynb
+++ b/py10.ipynb
@@ -307,6 +307,235 @@
    "source": [
     "data['company_size'].unique()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>experience_level</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>EN</th>\n",
+       "      <td>54.0</td>\n",
+       "      <td>59753.462963</td>\n",
+       "      <td>49103.427811</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>21732.25</td>\n",
+       "      <td>58800.5</td>\n",
+       "      <td>82500.0</td>\n",
+       "      <td>250000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EX</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>226288.000000</td>\n",
+       "      <td>164029.405584</td>\n",
+       "      <td>70329.0</td>\n",
+       "      <td>114021.50</td>\n",
+       "      <td>154963.0</td>\n",
+       "      <td>280000.0</td>\n",
+       "      <td>600000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MI</th>\n",
+       "      <td>103.0</td>\n",
+       "      <td>85738.135922</td>\n",
+       "      <td>78324.468318</td>\n",
+       "      <td>2876.0</td>\n",
+       "      <td>40505.00</td>\n",
+       "      <td>73000.0</td>\n",
+       "      <td>110000.0</td>\n",
+       "      <td>450000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SE</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>128841.298701</td>\n",
+       "      <td>67909.763752</td>\n",
+       "      <td>19052.0</td>\n",
+       "      <td>78340.00</td>\n",
+       "      <td>120000.0</td>\n",
+       "      <td>170000.0</td>\n",
+       "      <td>412000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  count           mean            std      min        25%  \\\n",
+       "experience_level                                                            \n",
+       "EN                 54.0   59753.462963   49103.427811   4000.0   21732.25   \n",
+       "EX                 11.0  226288.000000  164029.405584  70329.0  114021.50   \n",
+       "MI                103.0   85738.135922   78324.468318   2876.0   40505.00   \n",
+       "SE                 77.0  128841.298701   67909.763752  19052.0   78340.00   \n",
+       "\n",
+       "                       50%       75%       max  \n",
+       "experience_level                                \n",
+       "EN                 58800.5   82500.0  250000.0  \n",
+       "EX                154963.0  280000.0  600000.0  \n",
+       "MI                 73000.0  110000.0  450000.0  \n",
+       "SE                120000.0  170000.0  412000.0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.groupby('experience_level')['salary_in_usd'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_size</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>L</th>\n",
+       "      <td>132.0</td>\n",
+       "      <td>114374.015152</td>\n",
+       "      <td>90822.326575</td>\n",
+       "      <td>5898.0</td>\n",
+       "      <td>56183.5</td>\n",
+       "      <td>91500.0</td>\n",
+       "      <td>150000.0</td>\n",
+       "      <td>600000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>85082.818182</td>\n",
+       "      <td>72504.464408</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>36337.5</td>\n",
+       "      <td>71968.0</td>\n",
+       "      <td>116062.5</td>\n",
+       "      <td>450000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>S</th>\n",
+       "      <td>58.0</td>\n",
+       "      <td>80874.793103</td>\n",
+       "      <td>72038.848392</td>\n",
+       "      <td>2876.0</td>\n",
+       "      <td>35555.5</td>\n",
+       "      <td>68364.5</td>\n",
+       "      <td>101951.0</td>\n",
+       "      <td>416000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              count           mean           std     min      25%      50%  \\\n",
+       "company_size                                                                 \n",
+       "L             132.0  114374.015152  90822.326575  5898.0  56183.5  91500.0   \n",
+       "M              55.0   85082.818182  72504.464408  4000.0  36337.5  71968.0   \n",
+       "S              58.0   80874.793103  72038.848392  2876.0  35555.5  68364.5   \n",
+       "\n",
+       "                   75%       max  \n",
+       "company_size                      \n",
+       "L             150000.0  600000.0  \n",
+       "M             116062.5  450000.0  \n",
+       "S             101951.0  416000.0  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.groupby('company_size')['salary_in_usd'].describe()"
+   ]
   }
  ],
  "metadata": {
