--- a/py11.ipynb
+++ b/py11.ipynb
@@ -256,6 +256,55 @@
     "ax=data.plot.scatter(x='Height',y='Weight',alpha=.1)\n",
     "ax.plot(data['Height'],lin.predict(data[['Height']]),c='r')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import r2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8551742120609958"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(data['Weight'],lin.predict(data[['Height']]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8551742120609958"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lin.score(data[['Height']],data['Weight'])"
+   ]
   }
  ],
  "metadata": {
